--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,10 @@ jobs:
 
     - name: Run test script
       run: python test.py
+      env:
+        PYTHONUNBUFFERED: 1
 
     - name: Run test script with coverage
       run: coverage run test.py
+      env:
+        PYTHONUNBUFFERED: 1
