--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         python-version: ${{ matrix.py }}
 
     - name: Install packages
-      run: python -m pip install aiomysql==0.0.22 coverage==6.3
+      run: python -m pip install coverage==6.3
 
     - name: Run test script
       run: python test.py
