--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,12 +33,14 @@ jobs:
     - name: Install packages
       run: python -m pip install coverage==6.3
 
+    - name: Coverage info
+      run: coverage debug sys
+
+    - name: Show package versions
+      run: pip freeze
+
     - name: Run test script
       run: python test.py
-      env:
-        PYTHONUNBUFFERED: 1
 
     - name: Run test script with coverage
       run: coverage run test.py
-      env:
-        PYTHONUNBUFFERED: 1
